# aquarius

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json  vcpkg.json
.github/workflows/: cmake-ubuntu-clang.yml  cmake-ubuntu-coverage.yml  cmake-ubuntu-gcc.yml  cmake-windows-vs.yml  coverage.yml
cmake/: FindBoost.cmake  FindMySQL.cmake  FindOpenSSL.cmake  find_boost.cmake
config/: mysql.ini
crt/: ca.crt  ca.key  client.csr  client.key  dh2048.pem  dh4096.pem  dh512.pem  server.crt  server.csr  server.key  server.key.securt
docker/: Dockerfile
docs/: README_zh.md  design_zh.md  layout.md  layout_zh.md  lazytool.md  module.md  tbl.md  virgo.md
example/: aquarius.cpp  aquarius.sln  aquarius.vcxproj  aquarius.vcxproj.filters  test.hpp
include/: aquarius.hpp
include/aquarius/: any_io_executor.hpp  asio.hpp  async.hpp  async_acceptor.hpp  async_control.hpp  awaitable.hpp  basic_area.hpp  basic_area_of_interesting.hpp  basic_async_acceptor.hpp  basic_async_io_service.hpp  basic_attribute.hpp  basic_broadcast_context.hpp  basic_client.hpp  basic_connector.hpp  basic_context.hpp  basic_cross_list.hpp  basic_handler.hpp  basic_http_session.hpp  basic_level.hpp  basic_message_serialize.hpp  basic_module.hpp  basic_pool.hpp  basic_processor.hpp  basic_protocol.hpp  basic_router.hpp  basic_schedule.hpp  basic_serialize.hpp  basic_server.hpp  basic_session.hpp  basic_session_service.hpp  basic_socket_acceptor.hpp  basic_sql_stream.hpp  basic_ssl_session.hpp  basic_ssl_session_service.hpp  basic_stream_handler.hpp  basic_stream_socket.hpp  basic_tcp_session.hpp  basic_tcp_stream_context.hpp  basic_transfer_context.hpp  buffer.hpp  (+76 more)
sample/: echo_client.cpp
samples/: echo_server.cpp  samples.cpp
src/: CMakeLists.txt  aquarius.sln  code_generator.h  command_line.cpp  command_line.h  command_line.hpp  common.hpp  db.protocol  defines.h  echo_client.vcxproj  file_descripe.hpp  file_descriptor.cpp  file_descriptor.h  file_outer.hpp  file_struct.hpp  generator.cpp  generator.vcxproj  generator.vcxproj.filters  idle_gen_cpp.cpp  idle_gen_cpp.h  key_word.hpp  lazytool.cpp  lazytool.vcxproj  lazytool.vcxproj.filters  message_info.hpp  test.protocol  test_proto.mpr  test_proto.mpr.cpp  test_proto.mpr.h  test_proto.mpr.hpp  test_proto.proto  test_proto.proto.hpp
src/aquarius-cli/: aquarius-cli.cpp
src/client/: client.cpp
src/dbadmin/: account_table.h  ctx_account.cpp  dbadmin.cpp  error.hpp  server.cpp  server.h  server.hpp  transfer_client.cpp  transfer_client.h
src/gateway/: auth_module.cpp  auth_module.h  auth_schedule.cpp  auth_schedule.h  auth_schedule.hpp  auth_task.hpp  basic_transfer_context.hpp  client_module.h  client_pool.cpp  client_pool.h  client_schedule.hpp  ctx_login.cpp  ctx_serviced.cpp  ctx_transfer.cpp  default_selector.hpp  default_tcp_selector.hpp  firewal_task.hpp  firewall_module.cpp  firewall_module.h  firewall_schedule.cpp  firewall_schedule.h  firewall_schedule.hpp  gate_error_code.cpp  gate_error_code.h  gateway.cpp  global_config.hpp  http_client_pool.cpp  http_client_pool.h  payload.hpp  player.cpp  player.h  player_manager.cpp  player_manager.h  player_module.cpp  player_module.h  player_schedule.cpp  player_schedule.h  player_schedule.hpp  server.hpp  transfer.ini  (+7 more)
src/http_server/: http_server.cpp
src/lazytool/: CMakeLists.txt  code_generator.h  command_interface.cpp  command_interface.h  cpp_db_generate.cpp  cpp_db_generate.h  cpp_generate.cpp  cpp_generate.h  cpp_generater.cpp  cpp_generater.h  cpp_generator.cpp  custom_type.h  (+77 more)
test/: CMakeLists.txt  Test.cpp  adaptor.h  attr.h  attribute.h  binary_serialize.cpp  channel.h  client.cpp  client.h  cmd_options.cpp  cmd_options.h  concat.cpp  connect.h  context.h  core.h  crc.cpp  ctx_handler.cpp  ctx_handler.hpp  detail.cpp  detail.h  elastic_test.h  els.h  error_code.h  flex_buffer.cpp  float.cpp  generate.h  get_method_parse.cpp  handle_impl.hpp  handler.cpp  http_method.cpp  http_status.cpp  http_version.cpp  inherit.h  int_to_string.cpp  invoke.h  io.h  io_service_pool.cpp  io_service_pool.h  io_service_pool_test.h  json_serialize.cpp  (+85 more)
test/detail/: flex_buffer.cpp  int_to_string.cpp  struct_name.cpp  ut_asio.cpp  ut_concat.cpp  ut_concat.hpp.cpp  ut_config.cpp  ut_crc.cpp  ut_flex_buffer.cpp  ut_int_to_string.cpp  ut_make_endpoint.cpp  ut_member_pointer.cpp  ut_string_literal.cpp  ut_struct_name.cpp  ut_uuid_generator.cpp  uuid_generator.cpp
test/ip/: ctx_login_test.cpp  handler.cpp  http.cpp  login.virgo.h  raw_adaptor_test.cpp  ssl_adaptor_test.cpp  tcp.cpp  ut_context_reg.cpp  ut_context_traits.cpp  ut_handler.cpp  ut_http.cpp  ut_tcp.cpp  ut_udp.cpp
test/ip/adaptor/: ut_raw_adaptor.cpp  ut_ssl_adaptor.cpp
test/ip/http/: ut_http_helper.cpp  ut_http_options_handler.cpp
test/module/: channel.cpp  router.cpp  ut_module_register.cpp  ut_module_router.cpp  ut_mysql_module.cpp  ut_player_module.cpp  ut_schedule.cpp
test/resource/: invoke.cpp  ut_http_config.cpp  ut_mysql_config.cpp  ut_ssl_config.cpp
test/serialize/: binary.cpp  json.cpp  json_serialize.cpp  kv.cpp  ut_binary.cpp  ut_binary_parse_ext.cpp  ut_cookie.cpp  ut_http_serialize.cpp  ut_json.cpp  ut_kv.cpp  ut_scalar_type.cpp  ut_tcp_serialize.cpp
test/tbl/: grep.cpp  insert.cpp  remove.cpp  select.cpp  update.cpp  ut_add_string.cpp  ut_enter_view.cpp  ut_grep_view.cpp  ut_insert_view.cpp  ut_mysql_io_service.cpp  ut_mysql_type.cpp  ut_remove_view.cpp  ut_select_view.cpp  ut_update_view.cpp
test/virgo/: http_header.cpp  http_method.cpp  http_status.cpp  tcp_header.cpp  tcp_protocol.cpp  ut_basic_http_protocol.cpp  ut_basic_tcp_protocol.cpp  ut_error.cpp  ut_http_header.cpp  ut_http_method.cpp  ut_http_request.cpp  ut_http_response.cpp  ut_http_status.cpp  ut_http_version.cpp  ut_tcp_header.cpp  ut_tcp_request.cpp  ut_tcp_response.cpp  ut_tcp_response_commit.cpp
tools/: code_generator.h  command_line.cpp  common.hpp  idle_gen_cpp.h  part.h  protoc.cpp
triplet/: x64-linux-aquarius.cmake  x64-window-win10.cmake  x64-windows-aquarius.cmake  x64-windows-win10.cmake
(+773 files in other folders)
